SERVER-16106: Windows Service - Process SERVICE_CONTROL_SHUTDOWN correctly